# Anacronia

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
batch-cmd/: README.md  check-dino-apple-silicon.command  login-huggingface.command  measure-latent-map-first-open.command  open-anacronia.command  open-local-result-set-prototype.command  prepare-latent-map-j-shoot.command  rebuild-descriptors.command  security-baseline-check.command  setup-dinov3-local.command  setup-local-environment.command  start-anacronia.command  start-latent-map-j-shoot-dev.command  start-latent-map-j-shoot.command  stop-local-result-set-prototype.command  verify-bootstrap.command  verify-durable-latent-map-j-shoot.command  verify-issue-292.command  verify-issue-72.command
data/: README.md
docs/: README.md  current-contract.md  export-schema.md
research-notes/: anacronia-latent-map-prototype-prd.md  anacronia_latent_prototype_brief.md  chatgpt-share-dinov3-license-and-prototype.json  dinov3-latent-map-prototype-summary.md  siglip2-local-model-assessment.md
scripts/: verify-durable-latent-map-real-data.mjs
tests/: test_analysis_job_api.py  test_analysis_job_runtime.py  test_analysis_jobs.py  test_analysis_recipes.py  test_analysis_result_contract.py  test_analysis_result_registry.py  test_analysis_result_updates.py  test_analysis_results.py  test_analysis_scopes.py  test_analysis_stage_runner.py  test_api.py  test_artifact_store.py  test_batch_commands.py  test_cli.py  test_cli_descriptors.py  test_cli_search_sets.py  test_collection_runs.py  test_curation.py  test_exports.py  (+28 more)
(+323 files in other folders)
