[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anacronia"
version = "0.1.0"
description = "Local-first museum image collection builder."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Giorgio Olivero / Gio Sampietro" }]
dependencies = [
  "fastapi>=0.115,<1",
  "pillow>=10,<13",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=7,<9",
]

[project.scripts]
anacronia = "anacronia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
